site claro aiaiai meus olhos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
 
-        <button id="btTrocaTema"><a href="">Trocar Tema</a></button>
+        <button id="btTrocaTema">Trocar Tema</button>
 
         <h1 id="nome-curriculo">Ramon Coelho</h1>
 
@@ -79,7 +79,7 @@
 
     <section id="hard-skills">
 
-        <h2 class="hard">Hard Skills</h2>
+        <h2 class="hard">HARD SKILLS</h2>
 
         <ul class="lista-tags">
             <li>HTML</li>
@@ -96,7 +96,7 @@
 
     <section id="soft-skills">
         
-        <h2 class="soft">Soft skills</h2>
+        <h2 class="soft">SOFT SKILLS</h2>
         <ul class="lista-tags">
             <li>Cooperação</li>
             <li>Organização de tarefas</li>
@@ -150,7 +150,7 @@
             </article>
         </section>
    
-        <section id="articulacoes">
+        <section id="artigo">
             <article>
             
                 <h1>Leonardo teve uma surpresa!</h1>
