--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-tema="light">
+<html lang="pt-br" data-tema="dark">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
@@ -26,7 +26,7 @@
                 <li><a href="#hard-skills" class="social">Hard Skills</a></li>
                 <li><a href="#soft-skills" class="social">Soft Skills</a></li>
                 <li><a href="#idiomas" class="social">Idiomas</a></li>
-                <li><a href="#articulacoes" class="social">Notícias</a></li>  
+                <li><a href="#artigo" class="social">Notícias</a></li>  
             </ul>
         </nav>
         
