--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramon Coelho</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
+    <header>
+        <nav class="menu-navegacao">
+            <ul>
+                <span id="ramon"></span>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1>Bem vindo ao meu site!</h1>
+            <p>Nesse site, está todos os meus conhecimentos e habilidades. Estarei frenquentemente atualizando com o que estou aprendendo.</p>
+        </section>
+    </main>
+
+    <script src="js/auto-escreve.js"></script>
 </body>
 </html>
