--- a/index.html
+++ b/index.html
@@ -11,16 +11,45 @@
 
     <header>
         <nav class="menu-navegacao">
+            <span id="ramon"></span>
+
             <ul>
-                <span id="ramon"></span>
+                <li><img src="svg/github.svg" alt="GitHub" width="40px"></li>
+                <li></li>
+                <li></li>
             </ul>
+
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h1>Bem vindo ao meu site!</h1>
-            <p>Nesse site, está todos os meus conhecimentos e habilidades. Estarei frenquentemente atualizando com o que estou aprendendo.</p>
+    <section class="secao-apresentacao">
+        <h1>Bem vindo ao meu site!</h1>
+        <p>Nesse site, está todos os meus conhecimentos e habilidades. Atualmente sou um desenvolvedor front-end, mas estou trilhando o caminho para me tornar fullstack.</p>
+        <p>Atualmente, estou cursando Técnico em Desenvolvimento de Sistemas.</p>
+        <p>Estarei frenquentemente atualizando com o que estou aprendendo.</p>
+    </section>
+
+    <div class="foto-apresentacao"></div>
+    
+    <div class="intro-habilidades">
+        <h2>Minhas habilidades:</h2>
+    </div>
+
+    <main class="habilidades">
+        <section class="secao-habilidades-um">
+            <h3>Conhecimentos dominantes (Front-End):</h3>
+            <ul>
+                <li><img src="svg/7016965741557996995.svg" alt="html" width="50px"></li>
+                <li><img src="svg/367592651557997006.svg" alt="css" width="50px"></li>
+                <li><img src="svg/10440540451540553614.svg" alt="js" width="50px"></li>
+            </ul>
+        </section>
+
+        <section class="secao-habilidades-dois">
+           <h3>Estudando atualmente (Back-End):</h3>
+            <ul>
+                <li><img src="svg/2285724551551942634.svg" alt="php" width="100px"></li>
+            </ul> 
         </section>
     </main>
 
