--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span id="ramon"></span>
 
             <ul>
-                <li><img src="svg/github.svg" alt="GitHub" width="40px"></li>
+                <li><img src="svg/icons8-github.svg" alt="GitHub" width="50px"></li>
                 <li></li>
                 <li></li>
             </ul>
